# cuda-quantum

./: .gitignore  CMakeLists.txt  pyproject.toml.cu12  pyproject_mlir_only.toml  test_mps.cpp
.github/workflows/: ci.yml  deployments.yml  docker_images.yml  integration_tests.yml
api-doc/: ArgumentWrapper_8h_source.html  BaseRemoteRESTQPU_8h_source.html  BaseRemoteSimulatorQPU_8h_source.html  BaseRestRemoteClient_8h_source.html  BasicExecutionManager_8h_source.html  CircuitSimulator_8h_source.html  CuStateVecCircuitSimulator_8h_source.html  CuStateVecState_8h_source.html  EigenDense_8h_source.html  EigenSparse_8h_source.html  Environment_8h_source.html  ExecutionContext_8h_source.html  Executor_8h_source.html  FmtCore_8h_source.html  Future_8h_source.html  GPUInfo_8h_source.html  Gates_8h_source.html  JIT_8h_source.html  JsonConvert_8h.html  JsonConvert_8h_source.html  KernelWrapper_8h.html  KernelWrapper_8h_source.html  Logger_8h_source.html  MQPUUtils_8h_source.html  MeasureCounts_8h_source.html  MoleculePackageDriver_8h_source.html  NoiseModel_8h_source.html  NvqcConfig_8h_source.html  ObserveResult_8h_source.html  PluginUtils_8h_source.html  QIRTypes_8h_source.html  QuakeValue_8h_source.html  QuantumExecutionQueue_8h_source.html  QuditIdTracker_8h_source.html  Registry_8h_source.html  RemoteKernelExecutor_8h_source.html  Resources_8h_source.html  RestClient_8h_source.html  RestServer_8h_source.html  RuntimeMLIRCommonImpl_8h_source.html  (+330 more)
api-doc/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+66 more)
docker/release/: cudaq.nvqc.Dockerfile
docs/: Doxyfile.in
python/: CMakeLists.txt
python/cudaq/: __init__.py
python/extension/: CMakeLists.txt  CUDAQuantumExtension.cpp  CUDAQuantumMLIRExtension.cpp
python/utils/: LinkedLibraryHolder.cpp
realtime/: CMakeLists.txt
realtime/examples/cudaqx_decoder_hostcall/: CMakeLists.txt  README.md  build.sh  cudaqx_decoder_hostcall.cpp  cudaqx_decoder_hostcall.h
realtime/examples/hello_opx/: CMakeLists.txt
realtime/examples/hello_opx/bridge/cpu/: CMakeLists.txt  opnic_bridge_cpu.cpp  opnic_bridge_cpu.hpp  opnic_bridge_cpu_typed.hpp  opnic_direct_cpu.hpp  opnic_ring_shim.hpp  opnic_type.h
realtime/examples/hello_opx/bridge/gpu/: CMakeLists.txt  opnic_bridge.cu  opnic_bridge.cuh  opnic_device_ops.cuh  opnic_direct.cuh  opnic_kernels.cuh
realtime/examples/hello_opx/decoder/: CMakeLists.txt  README.md  decoder_config_qua.py  decoder_data_qua.py  decoder_dispatch.hpp  decoder_packets.h  decoder_qua.py  decoder_server_cpu.cpp  decoder_specs.py  run_decoder_sequence.py  test_decoder_sequence_batching.py
realtime/examples/hello_opx/decoder-2/: CMakeLists.txt  README.md
realtime/examples/hello_opx/decoder-2/data/: config_nvqldpc_relay.yml  config_trt_surface_code.yml
realtime/examples/hello_opx/decoder-2/qua/: decoder_data_qua.py  decoder_qua.py  decoder_specs.py  run_decoder_sequence.py  test_decoder_sequence_batching.py
realtime/examples/hello_opx/decoder-2/src/: decoder_handlers.cpp  decoder_handlers.h  decoder_packets.h  decoder_server_cpu.cpp
realtime/examples/hello_opx/decoder/data/: config_multi_err_lut.yml  syndromes_trt_surface_code.txt  trt_surface_code_golden.txt
realtime/examples/hello_opx/incrementer/: CMakeLists.txt  incrementer_cpu.cpp  incrementer_gpu.cu  incrementer_qua.py  run_incrementer.py
realtime/unittests/: CMakeLists.txt  test_host_dispatcher.cu
realtime/unittests/bridge_interface/cpu_roce/: CMakeLists.txt  cpu_roce_bridge.cpp  hsb_bridge_cpu_bridge.cpp  hsb_test_cpu_bridge.sh
runtime/: cudaq.h
runtime/common/: AnalogHamiltonian.h  BaseRemoteRESTQPU.h  BaseRemoteSimulatorQPU.h  BaseRestRemoteClient.h  BraketServerHelper.h  CMakeLists.txt  Demangle.cpp  Demangle.h  DynamicLibrary.cpp  DynamicLibrary.h  EvolveResult.h  ExecutionContext.h  Executor.cpp  Future.cpp  Future.h  JsonConvert.h  KernelWrapper.h  Logger.cpp  ObserveExperimentSetup.cpp  ObserveExperimentSetup.h  OutputRecording.h  PluginUtils.h  ServerHelper.cpp  ServerHelper.h
runtime/cudaq/: CMakeLists.txt  cudaq.cpp  cudaq_mpi.h  matrix.h  operators.h  realtime.cpp  remote_capabilities.h  spin_op.h
runtime/internal/device_call/: CMakeLists.txt  device_call_channel.cpp  device_call_dispatch.cpp  device_call_error.cpp  device_call_gpu_dispatch_channel.cpp  device_call_host_dispatch_channel.cpp  device_call_local_channel.cpp  device_call_mapped_ring_buffer.cpp  device_call_realtime.cpp  device_call_rpc_frame.cpp  device_call_service_utils.cpp  device_call_shared_memory_channel.cpp
runtime/internal/device_call/include/cudaq_internal/device_call/: ArgParsing.h  DeviceCallChannel.h  DeviceCallError.h  DeviceCallRuntime.h  DeviceCallRuntimePlugin.h  DeviceCallService.h  DeviceCallServiceUtils.h  LocalChannel.h  MappedRingBuffer.h  RpcFrame.h
runtime/nvqir/: CMakeLists.txt  CircuitSimulator.h  NVQIR.cpp
scripts/: .nvqc_proxy.py.swp  nvqc_proxy.py  validate_container.sh
targettests/Remote-Sim/: run_api.cpp
targettests/execution/: qalloc_hardware_backends.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/NVQPP/: device_call.cpp  device_call_realtime_bool_array_e2e.cpp  device_call_realtime_e2e.cpp
test/Transforms/: device_call_realtime.qke  device_call_realtime_device_id.qke  device_call_realtime_errors.qke  device_call_realtime_flat_array.qke  device_call_realtime_void.qke
test/device_call/tcp/: CMakeLists.txt  device_call_socket_utils.cpp  device_call_tcp_channel.cpp  device_call_tcp_server.cpp  tcp_socket_provider.cpp
test/device_call/tcp/include/: RealtimeServer.h  RealtimeTcpServer.h  SocketUtils.h  TcpArgParsing.h
tools/nvqpp/: CMakeLists.txt  (+1 more)
unittests/: CMakeLists.txt  main.cpp
(+188 files in other folders)
